--- a/client/src/pages/profile/styles.scss
+++ b/client/src/pages/profile/styles.scss
@@ -61,6 +61,6 @@
   text-align: left;
 }
 
-.checkbox {
+/* .checkbox {
   padding-left: 20% !important;
-}
+} */
